--- a/index.html
+++ b/index.html
@@ -10,10 +10,172 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="./style.css" />
     <title>Strive Book Shop</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#books">Books</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#cart">Cart</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input
+            class="form-control mr-sm-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+            Search
+          </button>
+        </form>
+      </div>
+    </nav>
+
+    <section class="jumbotron">
+      <div class="jumbotron">
+        <h1 class="display-4">Hello, world!</h1>
+        <p class="lead">
+          This is a simple hero unit, a simple jumbotron-style component for
+          calling extra attention to featured content or information.
+        </p>
+        <hr class="my-4" />
+        <p>
+          It uses utility classes for typography and spacing to space content
+          out within the larger container.
+        </p>
+        <p class="lead">
+          <a class="btn btn-primary btn-lg" href="#" role="button"
+            >Learn more</a
+          >
+        </p>
+      </div>
+    </section>
+
+    <section class="home">
+      <!------- div for filter -------->
+      <div class="container mb-5 filter-div" id="filter">
+        <div class="input-group rounded">
+          <input
+            type="search"
+            class="form-control rounded"
+            placeholder="Search"
+            aria-label="Search"
+            aria-describedby="search-addon"
+          />
+          <span class="input-group-text border-0" id="search-addon">
+            <i class="bi bi-search"></i>
+          </span>
+        </div>
+        <!-- TODO: 
+            When the user types more than 3 characters, filter the content of the API response to only display the books 
+            with a matching (or partially matching) title (hint: use .filter())
+        -->
+      </div>
+      <!------- div for books ------->
+      <div class="container mb-5 books-div" id="books">
+        <div class="row justify-content-center">
+          <div class="col-6 col-sm-4 col-md-3">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="https://images.unsplash.com/photo-1576872381149-7847515ce5d8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8Ym9va3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h5 class="card-title book-title text-center">Card title</h5>
+                <div class="card-text d-flex flex-column text-center my-3">
+                  <div class="book-category">scifi</div>
+
+                  <div class="book-price"><span>$</span>5.92</div>
+                </div>
+                <div class="d-flex justify-content-between">
+                  <a href="#" class="btn btn-primary add-to-cart-btn"
+                    >Add to cart</a
+                  >
+                  <a href="#" class="btn btn-primary skip-btn">Skip</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-sm-4 col-md-3">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="https://images.unsplash.com/photo-1576872381149-7847515ce5d8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8Ym9va3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h5 class="card-title book-title text-center">Card title</h5>
+                <div class="card-text d-flex flex-column text-center my-3">
+                  <div class="book-category">scifi</div>
+
+                  <div class="book-price"><span>$</span>5.92</div>
+                </div>
+                <div class="d-flex justify-content-between">
+                  <a href="#" class="btn btn-primary add-to-cart-btn"
+                    >Add to cart</a
+                  >
+                  <a href="#" class="btn btn-primary skip-btn">Skip</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-sm-4 col-md-3">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="https://images.unsplash.com/photo-1576872381149-7847515ce5d8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8Ym9va3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h5 class="card-title book-title text-center">Card title</h5>
+                <div class="card-text d-flex flex-column text-center my-3">
+                  <div class="book-category">scifi</div>
+
+                  <div class="book-price"><span>$</span>5.92</div>
+                </div>
+                <div class="d-flex justify-content-between">
+                  <a href="#" class="btn btn-primary add-to-cart-btn"
+                    >Add to cart</a
+                  >
+                  <a href="#" class="btn btn-primary skip-btn">Skip</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="./index.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
