--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
       </div>
       <!------- div for books ------->
       <div class="container mb-5 books-div" id="books">
-        <div class="row justify-content-center">
-          <div class="col-6 col-sm-4 col-md-3">
+        <div class="row justify-content-center book-row">
+          <!-- <div class="col-6 col-sm-4 col-md-3">
             <div class="card">
               <img
                 class="card-img-top"
@@ -125,53 +125,7 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3">
-            <div class="card">
-              <img
-                class="card-img-top"
-                src="https://images.unsplash.com/photo-1576872381149-7847515ce5d8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8Ym9va3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title book-title text-center">Card title</h5>
-                <div class="card-text d-flex flex-column text-center my-3">
-                  <div class="book-category">scifi</div>
-
-                  <div class="book-price"><span>$</span>5.92</div>
-                </div>
-                <div class="d-flex justify-content-between">
-                  <a href="#" class="btn btn-primary add-to-cart-btn"
-                    >Add to cart</a
-                  >
-                  <a href="#" class="btn btn-primary skip-btn">Skip</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3">
-            <div class="card">
-              <img
-                class="card-img-top"
-                src="https://images.unsplash.com/photo-1576872381149-7847515ce5d8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8Ym9va3xlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
-                alt="Card image cap"
-              />
-              <div class="card-body">
-                <h5 class="card-title book-title text-center">Card title</h5>
-                <div class="card-text d-flex flex-column text-center my-3">
-                  <div class="book-category">scifi</div>
-
-                  <div class="book-price"><span>$</span>5.92</div>
-                </div>
-                <div class="d-flex justify-content-between">
-                  <a href="#" class="btn btn-primary add-to-cart-btn"
-                    >Add to cart</a
-                  >
-                  <a href="#" class="btn btn-primary skip-btn">Skip</a>
-                </div>
-              </div>
-            </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
