Getting book id when clicking add cart button

--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
       </div>
     </section>
 
+    <section id="cart">
+      <h3>Your cart:</h3>
+    </section>
+
     <script src="./index.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
