updated add to cart button

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 
     <section id="cart">
       <h3>Your cart:</h3>
+      <div class="row justify-content-center cart-row"></div>
     </section>
 
     <script src="./index.js"></script>
